# reattend-desktop

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-windows.yml
scripts/: prebuild.cjs
src/: ambient.tsx  ask.tsx  capture.tsx  main.tsx  settings.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  macos_helper.m  main.rs
src-tauri/src/platform/: macos.rs  windows.rs
src-tauri/swift-plugin/: Package.swift
src-tauri/swift-plugin/Sources/: main.swift
